<resources>
    <string name="app_name">Fanar App</string>
    <string name="welcome">Welcome</string>
    <string name="to_fanar_application">To Fanar Application</string>
    <string name="sign_up_as_a_parent">Sign up as a Parent</string>
    <string name="sign_up_as_a_specialist">Sign up as a Specialist</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="go_login">Login</string>
    <string name="login">Login</string>
    <string name="email_hint">Email *</string>
    <string name="password_hint">Password *</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="go_sign_up">Sign up</string>
    <string name="privacy_policy">By proceeding you also agree the Terms of Service and Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="first_name_hint">First Name *</string>
    <string name="last_name_hint">Last Name *</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth Date</string>
    <string name="state_description_hint">State Description *</string>
    <string name="phone_hint">Phone *</string>
    <string name="confirm_password_hint">Confirm Password *</string>
    <string name="sign_up">Sign up</string>
    <string name="simple_brief_hint">Simple Brief about yourself *</string>
    <string name="college_degree_hint">College Degree *</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="parent_profile">Parent Profile</string>
    <string name="profile">Profile</string>
    <string name="specialist_profile">Specialist Profile</string>
    <string name="request_a_session">Request a Session</string>
    <string name="phone_number">Phone Number</string>
    <string name="college_degree">College Degree</string>
    <string name="comments">Comments</string>
    <string name="requests">Requests</string>
    <string name="simple_brief">Simple brief</string>
    <string name="sign_out">Sign out</string>
    <string name="chat">Chat</string>
    <string name="language">Language</string>
    <string name="locale">English</string>
    <string name="edit">Edit</string>
    <string name="state_description">State Description</string>
    <string name="start_learning">Start Learning</string>
    <string name="recordings">Recordings</string>
    <string name="specialists">Specialists</string>
    <string name="language_change_message">Application locale will be changed to Arabic. App will be restarted.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading</string>
    <string name="required_field">Required Field</string>
    <string name="bad_email">Email should be like example@mail.com</string>
    <string name="weak_password">Password should be at least 8 characters length and contains mix of numbers,capital and small letters.</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="account_created">Account has been created successfully</string>
    <string name="add_comment">Add Comment</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="changes_saved">Changes saved successfully</string>
    <string name="select_session_date_and_time">Select session date and time</string>
    <string name="send_request">Send Request</string>
    <string name="date_reserved">\"You\'ve chosen a reserved date..please try with another one  \"</string>
    <string name="request_sent_success">Request sent successfully</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="session_date">Session Date</string>
    <string name="session_time">"Session Time "</string>
    <string name="processing">Processing</string>
    <string name="request_updated">Request status updated</string>
    <string name="list_of_requests">List of Requests</string>
    <string name="call">Call</string>
    <string name="list_of_sent_request">List of Sent Request</string>
    <string name="make_chat">Chat</string>
    <string name="type_your_message">Type your message...</string>
    <string name="child_profile">Child Profile</string>
    <string name="inbox_empty">Your inbox is empty</string>
    <string name="sure">Sure</string>
    <string name="category_delete_msg">Are you sure to delete category and all its exercises?</string>
    <string name="mange_categories">You can manage categories now</string>
    <string name="add_edit_category">Add/Edit Category</string>
    <string name="category_title_hint">Category Title *</string>
    <string name="select_category_image_hint">Select Category Image *</string>
    <string name="you_should_select">You should select image</string>
    <string name="added_successfully">Added successfully</string>
    <string name="deleting">Deleting</string>
    <string name="exercises">Exercises</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="proceed">Proceed</string>
    <string name="confirm_selecting">If you select an audio file , any recordings will be deleted</string>
    <string name="uploading">Uploading</string>
    <string name="uploaded">Uploaded</string>
    <string name="mange_exercises">You can manage Exercises now</string>
    <string name="exercise_text">Exercise Text</string>
    <string name="use_the_controls_to_record_the_sound_for_this_exercise">Use the controls to Record the sound for this exercise:</string>
    <string name="or_tap_here_to_select_an_audio_file_to_upload">Or tap here to select an audio file to upload</string>
    <string name="option1_image">Option1 Image</string>
    <string name="option1_text">Option1 Text</string>
    <string name="option2_image">Option2 Image</string>
    <string name="option2_text">Option2 Text</string>
    <string name="option3_image">Option3 Image</string>
    <string name="option3_text">Option3 Text</string>
    <string name="correct_option">Correct option</string>
    <string name="you_should_upload">\"You should record sound or pick an audio file to upload \"</string>
    <string name="exercise_added">"Exercise added successfully "</string>
    <string name="you_cant_record_permission">You can\'t record without grant permissions</string>
    <string name="permission_granted">Permissions granted.. you can record now</string>
    <string name="recording_stopped">Recording stopped at 20 seconds</string>
    <string name="smaller_size">You should select smaller file size (max=50KB)</string>
    <string name="audio_selecetd">Audio File selected</string>
    <string name="exercise">Exercise</string>
    <string name="check">Check</string>
    <string name="question_text">Select the appropriate picture for the audio</string>
    <string name="animals">Animals</string>
    <string name="nature">Nature</string>
    <string name="vehicles">Vehicles</string>
    <string name="instruments">Instruments</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="monkey">Monkey</string>
    <string name="duck">Duck</string>
    <string name="chick">Chick</string>
    <string name="chicken">Chicken</string>
    <string name="cow">Cow</string>
    <string name="bird">Bird</string>
    <string name="horse">Horse</string>
    <string name="elephant">Elephant</string>
    <string name="rooster">Rooster</string>
    <string name="thunder">Thunder</string>
    <string name="wind">Wind</string>
    <string name="rain">Rain</string>
    <string name="waterfall">Waterfall</string>
    <string name="accordion">Accordion</string>
    <string name="piano">Piano</string>
    <string name="violin">Violin</string>
    <string name="flute">Flute</string>
    <string name="guitar">Guitar</string>
    <string name="drums">Drums</string>
    <string name="truck">Truck</string>
    <string name="car">Car</string>
    <string name="airplane">Airplane</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="ship">Ship</string>
    <string name="helicopter">Helicopter</string>
    <string name="muted_volume">Your music volume is muted</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="session_information">SESSION INFORMATION</string>
    <string name="session_date_pay">Session Date :</string>
    <string name="session_time_pay">Session Time :</string>
    <string name="specialist_name">Specialist Name :</string>
    <string name="total">Total :</string>
    <string name="_85_r_s">85 R.S</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="save_card_for_next_time">Save Card for next time?</string>
    <string name="payment_done">Payment done successfully</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_date">Date is not valid or card is expired .Make sure the date meets the format dd/MM/yyyy</string>
    <string name="invalid_cvv">CVV code should be 3 numbers only</string>
    <string name="new_req">New</string>
    <string name="paid">Paid</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="card_details">CARD DETAILS</string>

</resources>