<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan1"
    tools:context=".MainActivity">

    <ImageView
        android:elevation="15dp"
        android:id="@+id/btn_switch_lang"
        android:layout_gravity="left"
        android:src="@drawable/earth"
        android:layout_width="30dp"
        app:tint="@color/cyan2"
        android:layout_height="30dp"/>
    <ImageView
        android:layout_marginVertical="20dp"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/welcome"
        android:textSize="23sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/to_fanar_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Space
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up_parent"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:background="@drawable/button_back"
        android:text="@string/sign_up_as_a_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="10dp"
        android:id="@+id/btn_sign_up_specialist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:background="@drawable/button_back"
        android:text="@string/sign_up_as_a_specialist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:textSize="18sp"
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_login"
            android:textSize="18sp"
            android:text="@string/go_login"
            android:textColor="@color/cyan2"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <Space
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.appcompat.widget.LinearLayoutCompat>